src/objects/To_Do__c.object
<CustomObject>
    <fields>
        <fullName>Expired_By_Date__c</fullName>
        <formula>IF( RecordType.Name = &quot;Today&quot; &amp;&amp; DATEVALUE( CreatedDate ) &lt; TODAY(), true, IF(RecordType.Name = &quot;Tomorrow&quot; &amp;&amp; (DATEVALUE( CreatedDate ) + 1) &lt; TODAY(), true, false) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired By Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPersonal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsPersonal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Expired__c</fullName>
        <formula>IF( RecordType.Name  = &quot;Today&quot;  &amp;&amp;   DATEVALUE( CreatedDate ) &lt;  TODAY() &amp;&amp;  NOT( Is_Done__c ) , true,  IF(RecordType.Name  = &quot;Tomorrow&quot;  &amp;&amp;   (DATEVALUE( CreatedDate ) + 1) &lt;  TODAY() &amp;&amp; NOT( Is_Done__c ), true, false) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Later_ToDos_To_Do</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Random ToDos</label>
        <queue>Random_ToDos</queue>
        <sharedTo>
            <group>Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_ToDos_To_Do</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Admin ToDos</label>
        <queue>Admin_ToDos</queue>
        <sharedTo>
            <group>Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tomorrow_ToDos_To_Do</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Security ToDos</label>
        <queue>Security_ToDos</queue>
        <sharedTo>
            <group>Security</group>
        </sharedTo>
    </listViews>
</CustomObject>